--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Css Tricks</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Css Tricks</title>
+  </head>
+  <body>
+    <!-- <div>
+      <button>Submit</button>
+    </div> -->
+    <!-- <div>
+      <h1>Hello</h1>
+    </div>
+    <p>P tag</p>
+    <a href="#">Home</a>
+    <a href="#">Home</a>
+    <a href="#">Home</a> -->
+    <!-- <div>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div> -->
+    <!-- <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In numquam aperiam placeat, repellat eum quasi ut nostrum harum ab dicta voluptatibus, culpa quibusdam unde velit est fuga mollitia. Quibusdam alias corrupti, placeat perferendis suscipit ipsam laboriosam assumenda aliquam sit quidem. Vero sed dolor assumenda totam eligendi? Aut iste optio mollitia. Praesentium et voluptatibus unde perferendis distinctio cum! Impedit, fugit? Velit maiores voluptates laborum dolores. Tenetur iusto alias repellendus voluptatem beatae consectetur nulla reprehenderit vel illum officiis dolorem, quidem, eaque eum laudantium ab quibusdam laboriosam neque provident! Dolores, esse quae ut reprehenderit, obcaecati vitae eligendi ex assumenda explicabo corrupti excepturi voluptate.
+      </p>
+      <a href="#gallery">Travel to Gallery</a>
+    </div> -->
+    <section id="gallery">
+      <h1>Hello I am the gallery</h1>
+    </section>
+  </body>
 </html>
